--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "prisma": "^6.7.0"
+  },
+  "devDependencies": {
+    "@ljharb/tsconfig": "^0.3.2"
   }
 }
