--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development node backend/server.js",
+    "start": "NODE_ENV=production node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "prisma": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -23,3 +25,4 @@
     "@ljharb/tsconfig": "^0.3.2"
   }
 }
+
