--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
- "scripts": {
+"scripts": {
   "dev": "nodemon index.js",
   "start": "node index.js",
-  "build": "npx prisma generate"
+  "build": "npx prisma generate --schema=./prisma/schema.prisma"  
 }
+
 ,
   "keywords": [],
   "author": "",
