--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "backend/server.js",
 "scripts": {
-  "dev": "nodemon index.js",
-  "start": "node index.js",
+  "dev": "nodemon backend/server.js",
+  "start": "node backend/server.js",
   "build": "npx prisma generate --schema=./backend/prisma/schema.prisma"}
 
 ,
