--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "backend/server.js",
-"scripts": {
-  "dev": "nodemon backend/server.js",
-  "start": "node backend/server.js",
-  "build": "npx prisma generate --schema=./backend/prisma/schema.prisma"
-}
-
-
-,
+  "scripts": {
+    "dev": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "build": "npx prisma generate --schema=./backend/prisma/schema.prisma"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,6 +15,7 @@
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
@@ -27,4 +25,3 @@
     "@ljharb/tsconfig": "^0.3.2"
   }
 }
-
