--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "build": "cd backend && npx prisma generate"
+    "build": "cd backend && npm install && npx prisma generate"
+
   },
 
 
