--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-
+node_modules
+# Keep environment variables out of version control
+.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
